--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -91,7 +91,7 @@ background-image: linear-gradient(0deg, #f8f32a 0%, #080600 100%);
 /* AJUSTE IMAGEN LOGO */
 .img-envio {
     max-width: 25%;
-    text-align: center;
+
 }
 
 /* CONFIGURACION INTERNA NAVEGADOR */
@@ -443,4 +443,6 @@ background-image: linear-gradient(0deg, #f8f32a 0%, #080600 100%);
 .preguntas{
     display: grid;
 }
+
+/* ESTILOS QUIENES SOMOS BOOT */
 
