--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -7,7 +7,6 @@ body {
     padding: 0px;
 }
 
-@import url(responsive-480px.css);
 
 
 
@@ -60,8 +59,8 @@ h1 {
 /* IDENTIFICACION GRID-AREA DIVS */
 .logo {
     grid-area: logo;
-    justify-items: center;
     display: flex;
+    justify-items: center;
     justify-content: center;
     align-items: center;
 }
@@ -144,8 +143,8 @@ h1 {
         "categorias img-devoluciones t-devolucion"
         "categorias img-garantia t-garantia"
         "categorias img-seguridad t-seguridad"
-        "medio-de-pago . ."
-        "medio-de-pago img-tarjetas img-cripto";
+        "medio-de-pago img-cripto img-tarjetas"
+        "medio-de-pago img-cripto img-tarjetas";
 
 
 }
@@ -153,12 +152,13 @@ h1 {
 .grid-main-productos {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: minmax(auto, 100%);
-    grid-template-areas: "titulo productos"
-                "categorias productos"
-                "categorias productos"
-                "categorias productos"
-                
+    grid-template-rows: minmax(20px, 100%);
+    grid-template-areas:
+        "titulo productos"
+        "categorias productos"
+        "categorias productos"
+        "categorias productos"
+
     ;
 }
 
@@ -168,6 +168,10 @@ h1 {
     padding: 0%;
     width: 100%;
 
+}
+
+.grid-main div>p {
+    padding-right: 20%;
 }
 
 
@@ -213,10 +217,13 @@ h1 {
 
 }
 
+.porque {}
+
 .porque-elegirnos {
     grid-area: elegirnos;
+    justify-content: center;
     text-align: center;
-    font-size: 50px;
+    font-size: 35px;
     color: black;
     font: weight 900px;
     letter-spacing: 3px;
@@ -369,8 +376,10 @@ h1 {
 }
 
 .listado {
-    align-content: space-between;
+    /* align-content: stretch;
+    align-items:stretch; */
     width: 100%;
+    height: 100%;
     margin-left: 0%;
     padding-left: 0%;
     background-color: #e5e027;
@@ -411,14 +420,15 @@ h1 {
     text-align: center;
 }
 
+/* ------------------------------ */
 .texto-wpp {
     position: absolute;
-    top: 25%;
+    top: 40%;
     left: 37%;
     display: none;
     color: rgb(244, 242, 243);
-    font-weight: 600;
-    font-size: 150%;
+    font-weight:800;
+    font-size: 100%;
 }
 
 .img-wpp:hover {
@@ -430,15 +440,15 @@ h1 {
 }
 
 
-
+/* --------------------------- */
 .texto-face {
     position: absolute;
-    top: 25%;
-    left: 37%;
+    top: 40%;
+    left: 40%;
     display: none;
     color: rgb(244, 242, 243);
-    font-weight: 600;
-    font-size: 165%;
+    font-weight: 800;
+    font-size: 100%;
 }
 
 .img-face:hover {
@@ -449,14 +459,15 @@ h1 {
     display: block;
 }
 
+/* --------------------------------- */
 .texto-insta {
     position: absolute;
-    top: 25%;
-    left: 37%;
+    top: 40%;
+    left: 40%;
     display: none;
     color: rgb(244, 242, 243);
-    font-weight: 600;
-    font-size: 165%;
+    font-weight: 800;
+    font-size: 100%;
 }
 
 .img-insta:hover {
@@ -467,8 +478,11 @@ h1 {
     display: block;
 }
 
+/* ------------------------------------- */
+
 .footer img {
     width: 32%;
+    margin: 5%
 }
 
 .quienes,
@@ -490,6 +504,22 @@ h1 {
     margin-left: 30%;
 }
 
+.necesito {
+    align-self: center;
+}
+/* CARRITO DE COMPRAS SECCION PRODUCTOS */
+.carrito {
+    background-image: url(../Image/carrito.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    color: transparent;
+    border: none;
+    background-color: transparent;
+}
+
+/* ---------MEDIA--------- */
+
 @media (max-width: 992px) {
 
 
@@ -497,14 +527,170 @@ h1 {
         grid-template-columns: 1fr;
         grid-template-areas: "productos"
     }
+
+    .texto-wpp,
+    .texto-face,
+    .texto-insta{
+        font-size: 75%
+    }
+
 }
 
-.carrito{
-    background-image: url( ../Image/carrito.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: bottom;
-    color: transparent;
-    border: none;
-    background-color: transparent;
+
+
+
+
+@media (max-width: 944px) {
+
+    .necesito {
+        width: 50%;
+        margin-left: 15%
+    }
+
+    .buscador-content {
+        display: flex;
+        justify-items: center;
+    }
+
+
+
+
+    .menu a {
+        font-size: 15px;
+
+    }
+
+
+    .porque-elegirnos {
+
+        font-size: 30px;
+    }
+
+    .titulo-categoria {
+        font-size: large
+    }
+
+    .listado {
+        font-size: 12px
+    }
+
+    .texto-envios-gratis,
+    .texto-devolucion,
+    .texto-garantia,
+    .texto-seguridad {
+        font-size: 15px
+    }
+
+}
+
+
+
+
+@media (max-width: 800px) {
+    .necesito {
+        display: none;
+    }
+
+    .porque-elegirnos {
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .img-envio {
+        display: none;
+    }
+
+    .buscador {
+        display: none;
+    }
+
+   div > h1{
+    display: none;
+   }
+
+   
+   .texto-wpp,
+   .texto-face,
+   .texto-insta{
+       font-size: 57%
+   }
+}
+
+
+@media (max-width: 650px) {
+
+
+    .quienes,
+    .preguntas,
+    .li-quienes,
+    .li-preguntas {
+        display: none;
+        width: 0%;
+        height: 0%;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .grid-main {
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+        grid-template-rows: minmax(auto, 100%);
+        grid-template-areas: "elegirnos elegirnos"
+            "img-envio-gratis t-envio-g"
+            "img-devoluciones t-devolucion"
+            "img-garantia t-garantia"
+            "img-seguridad t-seguridad"
+            "medio-de-pago medio-de-pago"
+            "img-cripto img-tarjetas";
+
+
+    }
+
+    /*   .titulo-medio-de-pago{
+            display: none;
+        } */
+
+    .necesito {
+        display: none;
+    }
+
+    .productos {
+        padding-left: 15px;
+    }
+
+    .img-envio {
+        display: none;
+    }
+
+    .titulo-categoria,
+    .categorias {
+        display: none;
+    }
+
+    .grid-main {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .grid-main>div p {
+        font-size: medium;
+        font-weight: 700;
+        width: 100%;
+    }
+
+    .grid-main>div {
+        align-items: center;
+    }
+
+    .porque-elegirnos {
+        font-size: small;
+    }
+
+    
+    .texto-wpp,
+    .texto-face,
+    .texto-insta{
+        font-size: 40%
+    }
 }
