--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -7,6 +7,7 @@ body {
     padding: 0px;
 }
 
+@import url(responsive-480px.css);
 
 
 
@@ -59,8 +60,8 @@ h1 {
 /* IDENTIFICACION GRID-AREA DIVS */
 .logo {
     grid-area: logo;
-    display: flex;
     justify-items: center;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -143,8 +144,8 @@ h1 {
         "categorias img-devoluciones t-devolucion"
         "categorias img-garantia t-garantia"
         "categorias img-seguridad t-seguridad"
-        "medio-de-pago img-cripto img-tarjetas"
-        "medio-de-pago img-cripto img-tarjetas";
+        "medio-de-pago . ."
+        "medio-de-pago img-tarjetas img-cripto";
 
 
 }
@@ -152,13 +153,12 @@ h1 {
 .grid-main-productos {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: minmax(20px, 100%);
-    grid-template-areas:
-        "titulo productos"
-        "categorias productos"
-        "categorias productos"
-        "categorias productos"
-
+    grid-template-rows: minmax(auto, 100%);
+    grid-template-areas: "titulo productos"
+                "categorias productos"
+                "categorias productos"
+                "categorias productos"
+                
     ;
 }
 
@@ -168,10 +168,6 @@ h1 {
     padding: 0%;
     width: 100%;
 
-}
-
-.grid-main div>p {
-    padding-right: 20%;
 }
 
 
@@ -217,13 +213,10 @@ h1 {
 
 }
 
-.porque {}
-
 .porque-elegirnos {
     grid-area: elegirnos;
-    justify-content: center;
     text-align: center;
-    font-size: 35px;
+    font-size: 50px;
     color: black;
     font: weight 900px;
     letter-spacing: 3px;
@@ -376,10 +369,8 @@ h1 {
 }
 
 .listado {
-    /* align-content: stretch;
-    align-items:stretch; */
+    align-content: space-between;
     width: 100%;
-    height: 100%;
     margin-left: 0%;
     padding-left: 0%;
     background-color: #e5e027;
@@ -420,15 +411,14 @@ h1 {
     text-align: center;
 }
 
-/* ------------------------------ */
 .texto-wpp {
     position: absolute;
-    top: 40%;
+    top: 25%;
     left: 37%;
     display: none;
     color: rgb(244, 242, 243);
-    font-weight:800;
-    font-size: 100%;
+    font-weight: 600;
+    font-size: 150%;
 }
 
 .img-wpp:hover {
@@ -440,15 +430,15 @@ h1 {
 }
 
 
-/* --------------------------- */
+
 .texto-face {
     position: absolute;
-    top: 40%;
-    left: 40%;
+    top: 25%;
+    left: 37%;
     display: none;
     color: rgb(244, 242, 243);
-    font-weight: 800;
-    font-size: 100%;
+    font-weight: 600;
+    font-size: 165%;
 }
 
 .img-face:hover {
@@ -459,15 +449,14 @@ h1 {
     display: block;
 }
 
-/* --------------------------------- */
 .texto-insta {
     position: absolute;
-    top: 40%;
-    left: 40%;
+    top: 25%;
+    left: 37%;
     display: none;
     color: rgb(244, 242, 243);
-    font-weight: 800;
-    font-size: 100%;
+    font-weight: 600;
+    font-size: 165%;
 }
 
 .img-insta:hover {
@@ -478,11 +467,8 @@ h1 {
     display: block;
 }
 
-/* ------------------------------------- */
-
 .footer img {
     width: 32%;
-    margin: 5%
 }
 
 .quienes,
@@ -504,22 +490,6 @@ h1 {
     margin-left: 30%;
 }
 
-.necesito {
-    align-self: center;
-}
-/* CARRITO DE COMPRAS SECCION PRODUCTOS */
-.carrito {
-    background-image: url(../Image/carrito.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: bottom;
-    color: transparent;
-    border: none;
-    background-color: transparent;
-}
-
-/* ---------MEDIA--------- */
-
 @media (max-width: 992px) {
 
 
@@ -527,170 +497,14 @@ h1 {
         grid-template-columns: 1fr;
         grid-template-areas: "productos"
     }
-
-    .texto-wpp,
-    .texto-face,
-    .texto-insta{
-        font-size: 75%
-    }
-
 }
 
-
-
-
-
-@media (max-width: 944px) {
-
-    .necesito {
-        width: 50%;
-        margin-left: 15%
-    }
-
-    .buscador-content {
-        display: flex;
-        justify-items: center;
-    }
-
-
-
-
-    .menu a {
-        font-size: 15px;
-
-    }
-
-
-    .porque-elegirnos {
-
-        font-size: 30px;
-    }
-
-    .titulo-categoria {
-        font-size: large
-    }
-
-    .listado {
-        font-size: 12px
-    }
-
-    .texto-envios-gratis,
-    .texto-devolucion,
-    .texto-garantia,
-    .texto-seguridad {
-        font-size: 15px
-    }
-
-}
-
-
-
-
-@media (max-width: 800px) {
-    .necesito {
-        display: none;
-    }
-
-    .porque-elegirnos {
-        font-size: 20px;
-        font-weight: 600;
-    }
-
-    .img-envio {
-        display: none;
-    }
-
-    .buscador {
-        display: none;
-    }
-
-   div > h1{
-    display: none;
-   }
-
-   
-   .texto-wpp,
-   .texto-face,
-   .texto-insta{
-       font-size: 57%
-   }
-}
-
-
-@media (max-width: 650px) {
-
-
-    .quienes,
-    .preguntas,
-    .li-quienes,
-    .li-preguntas {
-        display: none;
-        width: 0%;
-        height: 0%;
-    }
-
-    .logo {
-        display: none;
-    }
-
-    .grid-main {
-        display: grid;
-        grid-template-columns: 2fr 2fr;
-        grid-template-rows: minmax(auto, 100%);
-        grid-template-areas: "elegirnos elegirnos"
-            "img-envio-gratis t-envio-g"
-            "img-devoluciones t-devolucion"
-            "img-garantia t-garantia"
-            "img-seguridad t-seguridad"
-            "medio-de-pago medio-de-pago"
-            "img-cripto img-tarjetas";
-
-
-    }
-
-    /*   .titulo-medio-de-pago{
-            display: none;
-        } */
-
-    .necesito {
-        display: none;
-    }
-
-    .productos {
-        padding-left: 15px;
-    }
-
-    .img-envio {
-        display: none;
-    }
-
-    .titulo-categoria,
-    .categorias {
-        display: none;
-    }
-
-    .grid-main {
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .grid-main>div p {
-        font-size: medium;
-        font-weight: 700;
-        width: 100%;
-    }
-
-    .grid-main>div {
-        align-items: center;
-    }
-
-    .porque-elegirnos {
-        font-size: small;
-    }
-
-    
-    .texto-wpp,
-    .texto-face,
-    .texto-insta{
-        font-size: 40%
-    }
+.carrito{
+    background-image: url( ../Image/carrito.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    color: transparent;
+    border: none;
+    background-color: transparent;
 }
